--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+button, span {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 html, body {
   width: 100%;
   height: 100vh;
@@ -12,7 +16,7 @@ html, body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #f5f5f5;
+  background-color: #111;
 }
 
 .popup {
@@ -45,14 +49,18 @@ html, body {
 .popup-option {
   width: 100%;
   height: 100%;
+
   display: flex;
   justify-content: center;
   align-items: center;
 
   outline: none;
   border: none;
+
   background-color: #f5f5f5;
-  color: #111
+  color: #111;
+
+  font-size: 0.9rem;
 }
 
 .po1 {
@@ -70,8 +78,8 @@ html, body {
 
 .popup-option:hover {
   cursor: pointer;
-  background-color: purple;
-  color: #f5f5f5;
+  background-color: #34CB79;
+  color: #111;
 }
 
 .popup-option:active {
